Removed network inspector (stetho) and fixes warnings

--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="ride">Ride</string>
     <string name="clothes">Clothes</string>
 
+<!-- Loading Box   -->
+    <string name="label_please_wait">Please wait…"</string>
+
 </resources>
