Ajustes rides color, dialog de share

--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -46,5 +46,9 @@
 
 <!-- Screen Prizes Activity -->
     <string name="txt_prizes_label">Prizes</string>
+    <string name="share">Share</string>
+    <string name="share_with_your_friends_how_you_travel_in_style_throughout_indonesia">Share with your friends how you travel in style throughout Indonesia.</string>
+    <string name="share_my_profile">Share my profile</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
