added leaderboard intent

--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -41,8 +41,8 @@
 <!-- Screen Missions Activity   -->
     <string name="txt_missions_label">Missions</string>
 
-<!-- Screen Team Activity   -->
-    <string name="txt_team_label">Team</string>
+<!-- Screen LeaderBoard Activity   -->
+    <string name="txt_leaderboard_label">Leader Board</string>
 
 <!-- Screen Prizes Activity -->
     <string name="txt_prizes_label">Prizes</string>
