--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -104,7 +104,9 @@
 
     <!-- Drawers Fist Mission-->
     <string name="title_first_mission">Your first mission</string>
+    <string name="title_end_mission">Great Job!</string>
     <string name="message_first_mission">Let\'s start the journey by giving you your first mission.\nYou will always get rewards for every mission you finish.</string>
+    <string name="message_message_mission">You finished your very first mission and are ready to take your moped out of the garage and travel to your first destination.</string>
     <string name="preparation">PREPARATION</string>
     <string name="create_your_profile">Create your profile</string>
     <string name="moke_sure_vou_hove_vour_id_and_everything_you_need_on_your_travel">Make sure you hove vour id and everything you need on your travel</string>
