--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -117,9 +117,11 @@
     <string name="message_first_mission">Let\'s start the journey by giving you your first mission.\nYou will always get rewards for every mission you finish.</string>
     <string name="message_message_mission">You finished your very first mission and are ready to take your moped out of the garage and travel to your first destination.</string>
     <string name="preparation">PREPARATION</string>
-    <string name="create_your_profile">Create your profile</string>
-    <string name="moke_sure_vou_hove_vour_id_and_everything_you_need_on_your_travel">Make sure you hove vour id and everything you need on your travel</string>
+    <string name="create_your_profile">Create your profile on Jelajah Nusantara</string>
+    <string name="registration">Registration</string>
     <string name="adventure">Adventure</string>
+    <string name="complete">Complete</string>
+    <string name="top_to_collect">Top to Collect</string>
     <string name="end_mission_tile">Arrive at your first destination</string>
     <string name="end_mission_message">Your mission km allow you to progress and win rewards</string>
 
