--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="daily">Daily</string>
     <string name="boosters">Boosters</string>
     <string name="missions">Missions</string>
+    <string name="not_available_yet">Function not available</string>
 
     <!-- Screen Avatar Activity + Internal Fragments   -->
     <string name="txt_profile_label">Profile</string>
