ajuste do fluxo inicial do app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="msisd_not_null">MsISDN can`t be empty or null</string>
     <string name="plan_not_null">Plan can`t be empty or null</string>
     <string-array name="Languages">
-        <item>English</item>
-        <item>Bahasa</item>
+        <item>en</item>
+        <item>idn</item>
     </string-array>
 </resources>
