ajuste do fluxo da tela de leaderboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
         <item>en</item>
         <item>idn</item>
     </string-array>
+    <string-array name="Tier">
+        <item>gold</item>
+        <item>silver</item>
+        <item>bronze</item>
+    </string-array>
 </resources>
