--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -91,7 +91,9 @@
     <string name="rd_prize_foods">FOODS</string>
     <string name="rd_prizes_sights">SIGHTS</string>
     <string name="rd_prizes_stays">STAYS</string>
-    <string name="city_id">City ID: %1$s</string>
+    <string name="city_id">ID/CityNumber: %1$s/ %1$s</string>
+    <string name="txtSubtitleTrivia">Trivia</string>
+    <string name="txtFindMore">Find out more -></string>
 
     <!-- Menu avatar  -->
     <string name="game_help">Game Help</string>
