--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="do_you_want_to_keep_the_changes_you_made">Do you want to keep the changes you made?</string>
     <string name="keep_changes">Keep Changes</string>
     <string name="do_not_save">Do Not Save</string>
+    <string name="btn_edit_avatar">Edit Avatar</string>
+    <string name="label_journey">JOURNEY</string>
 
     <!-- Loading Box   -->
     <string name="label_please_wait">Please wait…"</string>
