--- a/tti2sdk/src/main/res/values/strings.xml
+++ b/tti2sdk/src/main/res/values/strings.xml
@@ -119,6 +119,10 @@
     <string name="txtFindMore">Find out more -></string>
     <string name="txtWikipdia">Wikipeda</string>
     <string name="txtShare">Waiting for you in %s. In the meantime, I already discovered some restaurants, monuments and hotels in the area with MyTelkomsel - Jelajah Nusantara.\nJoin me on http://tsel.id/jn2</string>
+    <string name="prize_web_site">Webtsites</string>
+    <string name="prize_news">News</string>
+    <string name="prize_videos">Videos</string>
+
 
     <!-- Menu avatar  -->
     <string name="game_help">Game Help</string>
