--- a/app/src/main/res/values-idn/strings.xml
+++ b/app/src/main/res/values-idn/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Demo</string>
@@ -15,7 +16,6 @@
         <item>Platinum</item>
         <item>Diamond</item>
     </string-array>
-
     <string-array name="Plans">
         <item>prepaid</item>
         <item>postpaid</item>
